--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/google-maps-input": "^3.0.2",
     "@sanity/icons": "^2.6.0",
     "@sanity/ui": "^2.0.0",
     "@sanity/vision": "^3.28.0",
